# exercism

./: .gitignore  README.md
c/acronym/: tests.out
c/armstrong-numbers/: tests.out
c/beer-song/: tests.out
c/binary-search/: tests.out
c/binary-search-tree/: tests.out
c/circular-buffer/: tests.out
c/darts/: tests.out
c/difference-of-squares/: tests.out
c/gigasecond/: tests.out
c/grade-school/: tests.out
c/grains/: tests.out
c/hamming/: tests.out
c/hello-world/: tests.out
c/isogram/: tests.out
c/leap/: tests.out
c/nucleotide-count/: tests.out
c/pangram/: CMakeLists.txt  tests.out
c/pangram/.exercism/: metadata.json
c/pangram/src/: pangram.c
c/pangram/tests.out.dSYM/Contents/Resources/DWARF/: tests.out
c/raindrops/: tests.out
c/rational-numbers/: tests.out
c/resistor-color/: tests.out
c/resistor-color-duo/: tests.out
c/resistor-color-trio/: tests.out
c/rna-transcription/: tests.out
c/roman-numerals/: tests.out
c/saddle-points/: tests.out
c/say/: tests.out
c/secret-handshake/: tests.out
c/space-age/: tests.out
c/square-root/: tests.out
c/sum-of-multiples/: tests.out
c/two-fer/: tests.out
c/word-count/: CMakeLists.txt  tests.out
c/word-count/.exercism/: metadata.json
c/word-count/src/: word_count.c
c/word-count/test/: test_word_count.c
c/word-count/tests.out.dSYM/Contents/Resources/DWARF/: tests.out
cpp/all-your-base/: all_your_base.cpp  all_your_base.h
cpp/anagram/: anagram.cpp  anagram.h
cpp/armstrong-numbers/: armstrong_numbers.cpp  armstrong_numbers.h
cpp/binary-search/: binary_search.cpp  (+2 more)
(+403 files in other folders)
